--- a/index.html
+++ b/index.html
@@ -118,14 +118,33 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
+    <div class="row test">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <div class="col-lg-8">
+    <h2 class="Testimonial-statement"><span class="double-quotes">"</span>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.<span class="double-quotes">"</span></h2>
+    </div>
+
+    <div class="col-lg-4 dog-div">
+    <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
+    </div>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    </div>
+
+
+     <!-- <div class="row testimonial-row">
+
+    <div class="col-lg-8">
+    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+    </div>
+  
+    <div class="col-lg-4">
+    <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+    <em>Beverly, Illinois</em>
+   </div>
+
+
+    </div> -->
 
   </section>
 
