--- a/index.html
+++ b/index.html
@@ -118,33 +118,34 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
-    <div class="row test">
-
-    <div class="col-lg-8">
-    <h2 class="Testimonial-statement"><span class="double-quotes">"</span>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.<span class="double-quotes">"</span></h2>
-    </div>
-
-    <div class="col-lg-4 dog-div">
-    <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-    </div>
-
-    </div>
-
-
-     <!-- <div class="row testimonial-row">
-
-    <div class="col-lg-8">
-    <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    </div>
   
-    <div class="col-lg-4">
-    <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em>
-   </div>
+    <div id="testimonial-carousels" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
 
+        <div class="carousel-item active">
+          <h2 class="Testimonial-statement"><span class="double-quotes">"</span>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.<span class="double-quotes">"</span></h2>
+          <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile">
+          <em class="stating">Pebbles, New York</em>
+        </div>
 
-    </div> -->
+        <div class="carousel-item">
+          <h2 class="Testimonial-statement"><span class="double-quotes">"</span>My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.<span class="double-quotes">"</span></h2>
+          <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
+          <em class="stating">Beverly, Illinois</em>
+        </div>
+
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#testimonial-carousels" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <!-- <span class="visually-hidden">Previous</span> -->
+      </button>
+
+      <button class="carousel-control-next" type="button" data-bs-target="#testimonial-carousels" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <!-- <span class="visually-hidden">Next</span> -->
+      </button>
+    </div>
 
   </section>
 
@@ -152,10 +153,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
