--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <title>TinDog</title>
   
-   <!-- To add icons -->
+   <!-- icons -->
    <script src="https://kit.fontawesome.com/ca9f939049.js" crossorigin="anonymous"></script>
   
   
-   <!-- To add the fonts -->  
+   <!--fonts -->  
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
    
 
@@ -18,7 +18,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   
   
-<!-- After the BOOTSTRAP link , simply to override the changes and styles in the website as the order of styles determines which rule will be applied  -->
+
   
   <link rel="stylesheet" href="css/styles.css">
  
